A decent amount of work on laying out the header & footer

--- a/includes/_header.jade
+++ b/includes/_header.jade
@@ -1,1 +1,14 @@
 //- The header for all pages
+header
+  .container.top-header
+    a(href="http://clarkson.edu/"): img(src="img/clarksonlogo.jpg")
+    h1.left Clarkson Mirror
+  nav
+    .container
+      ul 
+        li.current Mirror Home
+        li Distributions
+        li 3rd Party Repos
+        li Misc.
+        li Directory Listing
+        li History
