--- a/includes/_footer.jade
+++ b/includes/_footer.jade
@@ -1,1 +1,13 @@
 //- The footer for all pages
+footer
+  .container
+    .row
+      .col.col--2-of-4
+        h3 Clarkson Open Source Institute
+        h3 Clarkson University | Science Center 336
+      .col.col--2-of-4
+        h3 Contact
+        p: a(href="mailto:cslabadmin@clarkson.edu") cslabadmin@clarkson.edu
+    .row
+      .col.col--1-of-3.col--push-1-of-3
+        p Main design by Benjamin Lannon
