--- a/includes/_header.jade
+++ b/includes/_header.jade
@@ -6,9 +6,15 @@ header
   nav
     .container
       ul 
-        li.current Mirror Home
-        li Distributions
-        li 3rd Party Repos
-        li Misc.
-        li Directory Listing
-        li History
+        li.current
+          a(href="") Mirror Home
+        li
+          a(href="") Distributions
+        li 
+          a(href="") 3rd Party Repos
+        li 
+          a(href="") Misc.
+        li 
+          a(href="") Directory Listing
+        li 
+          a(href="") History
