--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,3 +1,4 @@
+// Styles for the header
 header {
 
   margin-top: 10px;
@@ -29,16 +30,37 @@ nav {
   clear: both;
   background-color: $darker-green;
 
+  .container {
+    height: 50px;
+    margin: 0 auto;
+    padding: 0;
+  }
+
   ul {
     list-style-type: none;
     height: 50px;
-    padding: 10px 0px;
 
     li {
-      padding-left: 10px;
+      padding-left: 25px;
+      padding-right: 25px;
+      padding-top: 10px;
       box-sizing: border-box;
       display: block;
       float: left;
+      text-align: center;
+      height: inherit;
+
+      a {
+        display: block;
+        color: white;
+        text-decoration: none;
+        width: inherit;
+        height: inherit;
+      }
+
+      &:hover {
+        background: lighten($darker-green, 2%);
+      }
 
       &.current {
         background-color: darken($dark-green, 2.5%);
