--- a/includes/_header.jade
+++ b/includes/_header.jade
@@ -2,7 +2,7 @@
 header
   .container.top-header
     a(href="http://clarkson.edu/"): img(src="img/clarksonlogo.jpg")
-    h1.left Clarkson Mirror
+    h1.left Mirror
   nav
     .container
       ul 
