--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -29,6 +29,8 @@ header {
 nav {
   clear: both;
   background-color: $darker-green;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
 
   .container {
     height: 50px;
