--- a/includes/_header.jade
+++ b/includes/_header.jade
@@ -6,15 +6,15 @@ header
   nav
     .container
       ul 
-        li.current
-          a(href="") Mirror Home
-        li
-          a(href="") Distributions
-        li 
+        li#navhome
+          a(href="index.html") Mirror Home
+        li#navdistributions
+          a(href="distributions.html") Distributions
+        li#nav3rdparty
           a(href="") 3rd Party Repos
-        li 
+        li#navmisc
           a(href="") Misc.
-        li 
+        li#navdirectory
           a(href="") Directory Listing
-        li 
+        li#navhistory 
           a(href="") History
