--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -8,7 +8,7 @@ footer {
   box-shadow: 0px 2px 4px black;
 
   .container {
-    width: 960px;
+    max-width: 960px;
     padding-top: 1px;
     margin: 0 auto;
   }
@@ -21,5 +21,11 @@ footer {
     &:hover {
       font-weight: bold;
     }
+  }
+}
+
+@media (max-width: 900px) {
+  footer {
+    height: 320px;
   }
 }
