--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,9 +19,11 @@ hr {
 }
 
 .container {
-  width: 960px;
+  max-width: 960px;
   height: 100%;
   margin: 0 auto;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .content {
