--- a/css/main.css
+++ b/css/main.css
@@ -419,7 +419,25 @@ nav#navdesktop {
         background-color: #454e3b; }
 
 nav#navmobile {
-  display: none; }
+  display: none;
+  background-color: #383f30;
+  color: white; }
+  nav#navmobile ul {
+    list-style-type: none;
+    padding-left: 0px; }
+    nav#navmobile ul li {
+      margin: 0px;
+      width: 100%;
+      height: 50px; }
+      nav#navmobile ul li a {
+        text-align: center;
+        text-decoration: none;
+        width: inherit;
+        height: inherit;
+        display: block;
+        color: inherit; }
+        nav#navmobile ul li a:hover {
+          background-color: #3d4535; }
 
 @media (max-width: 900px) {
   nav#navdesktop {
@@ -447,7 +465,7 @@ footer {
 
 @media (max-width: 900px) {
   footer {
-    height: 320px; } }
+    height: 250px; } }
 /*-----------------------------------*\
 
   $TOAST-GRID
