--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -73,6 +73,32 @@ nav#navdesktop {
 
 nav#navmobile {
   display: none;
+  background-color: $darker-green;
+  color: white;
+
+  ul {
+    list-style-type: none;
+    padding-left: 0px;
+
+    li {
+      margin: 0px;
+      width: 100%;
+      height: 50px;
+
+      a {
+        text-align: center;
+        text-decoration: none;
+        width: inherit;
+        height: inherit;
+        display: block;
+        color: inherit;
+
+        &:hover {
+          background-color: lighten($darker-green, 2%);
+        }
+      }
+    }
+  }
 }
 
 @media (max-width: 900px) {
