Initializing remaining pages

--- a/includes/_header.jade
+++ b/includes/_header.jade
@@ -6,13 +6,13 @@ mixin nav-list
     li#navdistributions
       a(href="distributions.html") Distributions
     li#nav3rdparty
-      a(href="") 3rd Party Repos
+      a(href="3rdparty.html") 3rd Party Repos
     li#navmisc
-      a(href="") Misc.
+      a(href="misc.html") Misc.
     li#navdirectory
-      a(href="") Directory Listing
+      a(href="directory.html") Directory Listing
     li#navhistory 
-      a(href="") History
+      a(href="history.html") History
 
 header
   .container.top-header
