Completed Mobile navbar

--- a/directory.jade
+++ b/directory.jade
@@ -3,6 +3,9 @@ html(lang="en")
   head
     title Clarkson University Mirror - Directory
     link(rel="stylesheet" type="text/css" href="css/main.css")
+    link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css")
+    script(src="jquery-2.1.4.min.js")
+    script(src="main.js")
     meta(name="theme-color" content="#035245")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     meta(charset="utf-8")
