--- a/css/main.css
+++ b/css/main.css
@@ -382,9 +382,20 @@ header {
     padding-left: 10px;
     display: inline;
     float: left; }
+    header h1 a {
+      color: white;
+      text-decoration: none; }
   header img {
     float: left;
     display: inline; }
+
+i.menu-button {
+  color: white;
+  font-size: 2em;
+  margin: 0.67em 0;
+  float: right;
+  display: none;
+  padding-right: 15px; }
 
 nav#navdesktop {
   clear: both;
@@ -428,7 +439,13 @@ nav#navmobile {
     nav#navmobile ul li {
       margin: 0px;
       width: 100%;
-      height: 50px; }
+      height: 70px;
+      border-bottom: 2px solid #30372a;
+      padding-top: 15px;
+      padding-bottom: 15px;
+      box-sizing: border-box; }
+      nav#navmobile ul li:last-child {
+        border-bottom: none; }
       nav#navmobile ul li a {
         text-align: center;
         text-decoration: none;
@@ -439,12 +456,15 @@ nav#navmobile {
         nav#navmobile ul li a:hover {
           background-color: #3d4535; }
 
+@media (min-width: 901px) {
+  nav#navmobile {
+    display: none; } }
 @media (max-width: 900px) {
   nav#navdesktop {
     display: none; }
 
-  nav#navmobile {
-    display: block; } }
+  i.menu-button {
+    display: inline-block; } }
 footer {
   width: 100%;
   background-color: #383f30;
@@ -716,13 +736,13 @@ footer {
   min-height: 1px;
   padding-left: 30px;
   vertical-align: top; }
-  @media (max-width: 700px) {
+  @media (max-width: 900px) {
     .col {
       display: block;
       margin-left: 0;
       margin-right: 0;
       width: auto; } }
-  @media (max-width: 700px) and (min-width: 480px) {
+  @media (max-width: 900px) and (min-width: 480px) {
     .col[class*="col--m-"] {
       display: inline-block;
       margin-right: -.24em; }
