--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -14,6 +14,11 @@ header {
     padding-left: 10px;
     display: inline;
     float: left;
+
+    a {
+      color: white;
+      text-decoration: none;
+    }
   }
 
   img {
@@ -21,9 +26,15 @@ header {
     display: inline;
   }
 
-  // .left {
-  //   float: left;
-  // }
+}
+
+i.menu-button {
+  color: white;
+  font-size: 2em;
+  margin: 0.67em 0;
+  float: right;
+  display: none;
+  padding-right: 15px;
 }
 
 nav#navdesktop {
@@ -83,7 +94,15 @@ nav#navmobile {
     li {
       margin: 0px;
       width: 100%;
-      height: 50px;
+      height: 70px;
+      border-bottom: 2px solid darken($darker-green, 3%);
+      padding-top: 15px;
+      padding-bottom: 15px;
+      box-sizing: border-box;
+
+      &:last-child {
+        border-bottom: none;
+      }
 
       a {
         text-align: center;
@@ -101,12 +120,18 @@ nav#navmobile {
   }
 }
 
+@media (min-width: 901px) {
+  nav#navmobile {
+    display: none;
+  }
+}
+
 @media (max-width: 900px) {
   nav#navdesktop {
     display: none;
   }
 
-  nav#navmobile {
-    display: block;
+  i.menu-button {
+    display: inline-block;
   }
 }
