--- a/3rdparty.jade
+++ b/3rdparty.jade
@@ -4,8 +4,8 @@ html(lang="en")
     title Clarkson University Mirror - 3rd Party Repos
     link(rel="stylesheet" type="text/css" href="css/main.css")
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css")
-    script(src="jquery-2.1.4.min.js")
-    script(src="main.js")
+    script(src="js/jquery-2.1.4.min.js")
+    script(src="js/main.js")
     meta(name="theme-color" content="#035245")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     meta(charset="utf-8")
