Working on text layout

--- a/includes/_footer.jade
+++ b/includes/_footer.jade
@@ -3,7 +3,8 @@ footer
   .container
     .row
       .col.col--2-of-4
-        h3 Clarkson Open Source Institute
+        h3 
+          a(href="http://cslabs.clarkson.edu") Clarkson Open Source Institute
         h3 Clarkson University | Science Center 336
       .col.col--2-of-4
         h3 Contact
