--- a/index.jade
+++ b/index.jade
@@ -27,11 +27,11 @@ html(lang="en")
           h2 About Mirror
           p.
             This site is a public repository of free and open source software. It is located at
-            Clarkson University in Potsdam, NY, US. This site strives to provide exposure to open
-            source software and various open source operating systems. Currently, this site
-            mirrors several Linux distributions, some third party repositories, and even the Linux
-            Kernel. You can find out more information about everything we mirror by choosing
-            the category that you are interested in.
+            #[a(href="http://www.clarkson.edu/") Clarkson University] in Potsdam, NY, US. This
+            site strives to provide exposure to open source software and various open source
+            operating systems. Currently, this site mirrors several Linux distributions, some
+            third party repositories, and even the Linux Kernel. You can find out more information
+            about everything we mirror by choosing the category that you are interested in.
             
         hr
         
@@ -43,7 +43,7 @@ html(lang="en")
             p.
               We host around 20 distributions including Debian, Ubuntu, Arch Linux, Linux Mint,
               and many more. Many are official mirrors and the majority are updated 4 times a
-              day from upstream mirrors. Learn more on the Distributions page.
+              day from upstream mirrors. Learn more on the #[a(href="distributions.html") Distributions] page.
         .row.mid
           .col.col--1-of-3
             img(src="img/gnu.svg")
@@ -63,6 +63,6 @@ html(lang="en")
         p.
           The newest iteration will be completed in January 2016, but we have had Mirror
           running for almost a decade now. If you want to learn more about the newest
-          iteration or the history behind the project, Visit the History page.
+          iteration or the history behind the project, Visit the #[a(href="history.html") History] page.
         
     include includes/_footer.jade
