--- a/css/main.css
+++ b/css/main.css
@@ -379,6 +379,7 @@ header {
   header .top-header {
     height: 80px; }
   header h1 {
+    padding-top: 20px;
     padding-left: 10px;
     display: inline;
     float: left; }
@@ -408,11 +409,12 @@ nav#navdesktop {
     padding: 0; }
   nav#navdesktop ul {
     list-style-type: none;
-    height: 50px; }
+    height: 3rem; }
     nav#navdesktop ul li {
       padding-left: 25px;
       padding-right: 25px;
-      padding-top: 10px;
+      padding-top: 1em;
+      padding-bottom: 1em;
       box-sizing: border-box;
       display: block;
       float: left;
@@ -421,9 +423,7 @@ nav#navdesktop {
       nav#navdesktop ul li a {
         display: block;
         color: white;
-        text-decoration: none;
-        width: inherit;
-        height: inherit; }
+        text-decoration: none; }
       nav#navdesktop ul li:hover {
         background: #3d4535; }
       nav#navdesktop ul li.current {
@@ -439,10 +439,9 @@ nav#navmobile {
     nav#navmobile ul li {
       margin: 0px;
       width: 100%;
-      height: 70px;
       border-bottom: 2px solid #30372a;
-      padding-top: 15px;
-      padding-bottom: 15px;
+      padding-top: 1em;
+      padding-bottom: 1em;
       box-sizing: border-box; }
       nav#navmobile ul li:last-child {
         border-bottom: none; }
@@ -801,6 +800,9 @@ body {
   background-color: #4b5541;
   font-family: "Open Sans"; }
 
+h1 {
+  margin-top: 0; }
+
 hr {
   width: 80%;
   margin: 0 auto;
@@ -810,11 +812,13 @@ hr {
   max-width: 960px;
   height: 100%;
   margin: 0 auto;
-  padding-left: 5px;
-  padding-right: 5px; }
+  padding-left: 2rem;
+  padding-right: 2rem; }
 
 .content {
   background-color: #fafafa; }
+  .content a {
+    color: green; }
   .content .top {
     padding-top: 20px; }
   .content img {
@@ -832,8 +836,17 @@ hr {
   background-image: url("../img/mainback.jpeg");
   box-sizing: border-box; }
   .carasouel h1 {
-    margin-top: 0;
     font-size: 4em;
     padding-top: 50px; }
+
+@media screen and (max-width: 800px) {
+  .container {
+    padding-left: 1rem;
+    padding-right: 1rem; }
+
+  p {
+    text-align: justify; } }
+.row {
+  margin-bottom: 5px; }
 
 /*# sourceMappingURL=main.css.map */
