--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -11,6 +11,7 @@ header {
   }
 
   h1 {
+    padding-top: 20px;
     padding-left: 10px;
     display: inline;
     float: left;
@@ -51,12 +52,13 @@ nav#navdesktop {
 
   ul {
     list-style-type: none;
-    height: 50px;
+    height: 3rem;
 
     li {
       padding-left: 25px;
       padding-right: 25px;
-      padding-top: 10px;
+      padding-top: 1em;
+      padding-bottom: 1em;
       box-sizing: border-box;
       display: block;
       float: left;
@@ -67,8 +69,6 @@ nav#navdesktop {
         display: block;
         color: white;
         text-decoration: none;
-        width: inherit;
-        height: inherit;
       }
 
       &:hover {
@@ -94,10 +94,9 @@ nav#navmobile {
     li {
       margin: 0px;
       width: 100%;
-      height: 70px;
       border-bottom: 2px solid darken($darker-green, 3%);
-      padding-top: 15px;
-      padding-bottom: 15px;
+      padding-top: 1em;
+      padding-bottom: 1em;
       box-sizing: border-box;
 
       &:last-child {
