More work on typography and updating fonts

--- a/index.jade
+++ b/index.jade
@@ -20,7 +20,6 @@ html(lang="en")
     .carasouel
       .container
         h1 Welcome to Mirror
-        h2 Subtitle goes here...
     .content
       .container
         .top
@@ -49,13 +48,17 @@ html(lang="en")
             img(src="img/gnu.svg")
           .col.col--2-of-3
             h2 GNU Software
-            p This is some text to talk about the things and stuff  
+            p.
+                We also host a large quantity of software maintained by the GNU Project. you can
+                find it on the #[a(href="misc.html") Misc.] page.
         .row.mid
           .col.col--1-of-3
             img(src="img/tux.png")
           .col.col--2-of-3
             h2 Linux Kernel
-            p This is some text to talk about the things and stuff
+            p.
+             Versions of the Linux Kernel (Up to 4.3.X) can also be found on the #[a(href="misc.html") Misc.]
+             page. found in the same place is documentation and souce for the kernel.
         
         hr
         
