--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,7 @@
-// Main Variables
+// Colors
 $dark-green: #4b5541;
 $darker-green: darken($dark-green, 7.5%);
-$main-font: "Open Sans";
-$bold-font: "Raleway";
+
+// Fonts
+$main-font: "Roboto";
+$bold-font: "Roboto Slab";
