--- a/css/main.css
+++ b/css/main.css
@@ -16,8 +16,8 @@
  * 3. Corrects text resizing oddly in IE 6/7 when body `font-size` is set using
  *  `em` units.
  */
-@import url(https://fonts.googleapis.com/css?family=Raleway);
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+@import url(https://fonts.googleapis.com/css?family=Roboto);
+@import url(https://fonts.googleapis.com/css?family=Roboto+Slab);
 html {
   font-family: sans-serif;
   /* 1 */
@@ -440,8 +440,8 @@ nav#navmobile {
       margin: 0px;
       width: 100%;
       border-bottom: 2px solid #30372a;
-      padding-top: 1em;
-      padding-bottom: 1em;
+      padding-top: 1.25em;
+      padding-bottom: 1.25em;
       box-sizing: border-box; }
       nav#navmobile ul li:last-child {
         border-bottom: none; }
@@ -468,7 +468,7 @@ footer {
   width: 100%;
   background-color: #383f30;
   color: white;
-  height: 160px;
+  height: 180px;
   z-index: 2;
   box-shadow: 0px 2px 4px black; }
   footer .container {
@@ -798,7 +798,7 @@ footer {
 
 body {
   background-color: #4b5541;
-  font-family: "Open Sans"; }
+  font-family: "Roboto"; }
 
 h1 {
   margin-top: 0; }
@@ -817,6 +817,8 @@ hr {
 
 .content {
   background-color: #fafafa; }
+  .content p {
+    line-height: 1.5em; }
   .content a {
     color: green; }
   .content .top {
@@ -829,7 +831,7 @@ hr {
     margin-bottom: 15px; }
 
 .carasouel {
-  font-family: "Raleway";
+  font-family: "Roboto Slab";
   text-align: center;
   color: white;
   height: 300px;
@@ -847,6 +849,6 @@ hr {
   p {
     text-align: justify; } }
 .row {
-  margin-bottom: 5px; }
+  margin-bottom: 8px; }
 
 /*# sourceMappingURL=main.css.map */
