--- a/distributions.jade
+++ b/distributions.jade
@@ -18,5 +18,44 @@ html(lang="en")
       
   body
     include includes/_header.jade
-                            
+    .content
+      .container
+        h1 Distributions
+        
+        .distro
+          h3 Arch Linux
+          .distro  
+          h3 Backtrack
+          .distro    
+          h3 CentOS (Official Mirror)
+          .distro  
+          h3 Debian
+          .distro  
+          h3 Fedora (Official Mirror)
+          .distro  
+          h3 Gentoo
+          .distro  
+          h3 IPFire (Official Mirror)
+          .distro
+          h3 Knoppix
+          .distro
+          h3 LinuxMint
+          .distro
+          h3 OpenBSD
+          .distro
+          h3 pfSense
+          .distro
+          h3 OpenSUSE
+          .distro
+          h3 Sabayon (Official Mirror)
+          .distro
+          h3 Serenity Linux (Main Mirror)
+          .distro
+          h3 Slackware
+          .distro
+          h3 Slitaz (Official Mirror)
+          .distro
+          h3 Ubutnu (Official Mirror)
+          .distro
+          h3 Unity Linux (Official Mirror)
     include includes/_footer.jade
