--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import "layout/header";
 @import "layout/footer";
 @import "vendors/grid";
+@import "components/distro";
 
 @import url(https://fonts.googleapis.com/css?family=Roboto);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab);
@@ -32,6 +33,7 @@ hr {
 
 .content {
   background-color: darken(white, 2%);
+  padding-top: 20px;
 
   p {
     line-height: 1.5em;
@@ -39,10 +41,6 @@ hr {
 
   a {
     color: green;
-  }
-
-  .top {
-    padding-top: 20px;
   }
 
   img {
