fixing includes bug and renaming history page to history & sponsors

--- a/includes/_mixins.jade
+++ b/includes/_mixins.jade
@@ -11,4 +11,4 @@ mixin nav-list
     li#navdirectory
       a(href="directory.html") Directory Listing
     li#navhistory 
-      a(href="history.html") History
+      a(href="history.html") History & Sponsors
