--- a/jade/distributions.jade
+++ b/jade/distributions.jade
@@ -17,7 +17,7 @@ html(lang="en")
       };
       
   body
-    include includes/_header.jade
+    include ../includes/_header.jade
     .content
       .container
         h1 Distributions
@@ -84,4 +84,4 @@ html(lang="en")
               h3 Ubutnu (Official Mirror)
               .distro
               h3 Unity Linux (Official Mirror)
-    include includes/_footer.jade
+    include ../includes/_footer.jade
