--- a/jade/index.jade
+++ b/jade/index.jade
@@ -16,10 +16,12 @@ html(lang="en")
       var foo = document.getElementById("navhome");
       foo.setAttribute("class", "current"); };
   body
-    include includes/_header.jade
+    include ../includes/_header.jade
+    
     .carasouel
       .container
         h1 Welcome to Mirror
+        
     .content
       .container
         .top
@@ -63,4 +65,4 @@ html(lang="en")
           running for almost a decade now. If you want to learn more about the newest
           iteration or the history behind the project, Visit the #[a(href="history.html") History] page.
         
-    include includes/_footer.jade
+    include ../includes/_footer.jade
