--- a/scss/main.scss
+++ b/scss/main.scss
@@ -29,6 +29,11 @@ hr {
   margin: 0 auto;
   padding-left: 2rem;
   padding-right: 2rem;
+
+}
+
+img.logo {
+  width: 90%;
 }
 
 .content {
@@ -52,6 +57,10 @@ hr {
   .mid {
     margin-bottom: 15px;
   }
+}
+
+.center {
+  text-align: center;
 }
 
 .carasouel {
