--- a/jade/history.jade
+++ b/jade/history.jade
@@ -18,4 +18,20 @@ html(lang="en")
       
   body
     include ../includes/_header.jade
+    .content
+      .container
+        h1 History
+        p Mirror has existed for about a decade in the labs. 
+    
+      .container
+        h1 Sponsors
+        p We would like to thank everyone that helped out contributing to help the new mirror possible, including:
+        .row
+          .col.col--2-of-4
+            a(href="http://www.vmware.com/"): img(src="img/vmware.jpg").logo
+          .col.col--2-of-4
+            a(href="https://www.siegetechnologies.com/"): img(src="img/siege.jpg").logo
+        p and these other sponsors:
+        
+    
     include ../includes/_footer.jade
