--- a/jade/history.jade
+++ b/jade/history.jade
@@ -33,5 +33,7 @@ html(lang="en")
             a(href="https://www.siegetechnologies.com/"): img(src="img/siege.jpg").logo
         p and these other sponsors:
         
+      .container.subfooter.center
+        p The logos are copyrighted by VMware and Siege Technologies respectively and fair use is given.
     
     include ../includes/_footer.jade
