--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,6 +1,7 @@
 // Colors
 $dark-green: #4b5541;
 $darker-green: darken($dark-green, 7.5%);
+$lighter-black: #777;
 
 // Fonts
 $main-font: "Roboto";
