--- a/jade/index.jade
+++ b/jade/index.jade
@@ -55,7 +55,7 @@ html(lang="en")
             h2 Linux Kernel
             p.
              Versions of the Linux Kernel (Up to 4.3.X) can also be found on the #[a(href="misc.html") Misc.]
-             page. found in the same place is documentation and souce for the kernel.
+             page, found in the same place is documentation and souce for the kernel.
         
         hr
         
