--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,9 +1,9 @@
-@import "base/normalize";
-@import "base/variables";
-@import "layout/header";
-@import "layout/footer";
-@import "vendors/grid";
-@import "components/distro";
+@import 'base/normalize';
+@import 'base/variables';
+@import 'layout/header';
+@import 'layout/footer';
+@import 'vendors/grid';
+@import 'components/distro';
 
 @import url(https://fonts.googleapis.com/css?family=Roboto);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab);
@@ -14,27 +14,27 @@ body {
 }
 
 h1 {
-      margin-top: 0;
+  margin-top: 0;
 }
 
 hr {
-  width: 80%;
   margin: 0 auto;
   margin-bottom: 30px;
+  width: 80%;
 }
 
 .container {
-  max-width: 960px;
   height: 100%;
   margin: 0 auto;
+  max-width: 960px;
   padding-left: 2rem;
   padding-right: 2rem;
 
 }
 
 img.logo {
-  width: 90%;
   margin-bottom: 10px;
+  width: 90%;
 }
 
 .content {
@@ -51,8 +51,8 @@ img.logo {
 
   img {
     display: block;
-    margin: 0 auto;
     height: 200px;
+    margin: 0 auto;
   }
 
   .mid {
@@ -61,7 +61,7 @@ img.logo {
 
   .subfooter {
     color: $lighter-black;
-    font-size: 0.8em;
+    font-size: .8em;
   }
 }
 
@@ -74,7 +74,7 @@ img.logo {
   text-align: center;
   color: white;
   height: 300px;
-  background-image: url("../img/mainback.jpeg");
+  background-image: url('../img/mainback.jpeg');
   box-sizing: border-box;
 
   h1 {
