--- a/jade/history.jade
+++ b/jade/history.jade
@@ -33,6 +33,13 @@ html(lang="en")
             a(href="https://www.siegetechnologies.com/"): img(src="img/siege.jpg").logo
         p and these other sponsors:
         
+        ul.center(style="list-style-type: none;")
+          li Eric Busse
+          li Ted Champagne
+          li Steve Evanchik
+          li Wenjin Hu
+          li Mark Platek
+        
       .container.subfooter.center
         p The logos are copyrighted by VMware and Siege Technologies respectively and fair use is given.
     
