--- a/jade/misc.jade
+++ b/jade/misc.jade
@@ -18,4 +18,86 @@ html(lang="en")
       
   body
     include ../includes/_header.jade
+    
+    .content
+      .container
+        section
+          h1 GNU Software (Official Mirror)
+          h5 HTTP: 
+          a(href="http://mirror.clarkson.edu/gnu/") http://mirror.clarkson.edu/gnu/
+          br
+          
+          h5 Rsync:
+          |  rsync://mirror.clarkson.edu/gnu
+          br
+          br
+          
+          h5 Upstream Mirror: 
+          a(href="http://mirror.rit.edu/") http://mirror.rit.edu/
+          br
+          
+          h5 Frequency of Updates:
+          |  4 times Daily
+          br
+          
+          h5 Homepage: 
+          a(href="http://directory.fsf.org/GNU/") http://directory.fsf.org/GNU/
+        
+        section
+          h1 Linux (Including Kernel Source)
+          h5 HTTP: 
+          a(href="http://mirror.clarkson.edu/linux/") http://mirror.clarkson.edu/linux/
+          br
+          
+          h5 Rsync:
+          |  rsync://mirror.clarkson.edu/linux/
+          br
+          br
+          
+          h5 Upstream Mirror: 
+          a(href="http://rsync.kernel.org/") http://rsync.kernel.org/
+          br
+          
+          h5 Frequency of Updates:
+          |  4 times Daily
+          br
+          
+          h5 Homepage: 
+          a(href="http://kernel.org") http://kernel.org
+          
+        section
+          h1 Software (Not Linux-specific)
+          h5 HTTP: 
+          a(href="http://mirror.clarkson.edu/software/") http://mirror.clarkson.edu/software/
+          br
+          
+          h5 Rsync:
+          |  rsync://mirror.clarkson.edu/software/
+          br
+          br
+          
+          h5 Upstream Mirror: 
+          a(href="http://debian.lcs.mit.edu/") http://debian.lcs.mit.edu/
+          br
+          
+          h5 Frequency of Updates:
+          |  4 times Daily
+          br
+          
+          h5 Homepage: 
+          a(href="http://kernel.org") http://kernel.org
+          
+        section
+          h1 Isabelle
+          h5 HTTP: 
+          a(href="http://mirror.clarkson.edu/isabelle/") http://mirror.clarkson.edu/isabelle/
+          br
+          
+          h5 Frequency of Updates:
+          |  4 times Daily
+          br
+          
+          h5 Homepage: 
+          a(href="https://isabelle.in.tum.de/") https://isabelle.in.tum.de/
+    
     include ../includes/_footer.jade
