--- a/includes/_mixins.jade
+++ b/includes/_mixins.jade
@@ -4,11 +4,11 @@ mixin nav-list
       a(href="index.html") Mirror Home
     li#navdistributions
       a(href="distributions.html") Distributions
-    li#nav3rdparty
-      a(href="3rdparty.html") 3rd Party Repos
     li#navmisc
       a(href="misc.html") Misc.
     li#navdirectory
       a(href="directory.html") Directory Listing
     li#navhistory 
       a(href="history.html") History & Sponsors
+    li
+      a(href="http://cslabs.clarkson.edu") CSLabs Homepage
