Added top navbar to site

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -130,6 +130,10 @@ nav#navmobile {
     display: none;
   }
 
+  .navlinks {
+    display: none;
+  }
+
   i.menu-button {
     display: inline-block;
   }
