--- a/css/main.css
+++ b/css/main.css
@@ -539,6 +539,9 @@ nav#navmobile ul li a:hover {
   nav#navdesktop {
     display: none;
   }
+  .navlinks {
+    display: none;
+  }
   i.menu-button {
     display: inline-block;
   }
@@ -1003,9 +1006,35 @@ footer a:hover {
   padding: 10px 0px;
 }
 
+.navlinks {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  font-size: 12px;
+  height: 40px;
+  border-bottom: 2px solid black;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.navlinks ul {
+  list-style-type: none;
+}
+
+.navlinks ul li {
+  display: inline;
+  margin-right: 15px;
+}
+
+.navlinks ul li a {
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+}
+
 body {
   background-color: #4b5541;
   font-family: "Roboto";
+  margin-top: 60px;
 }
 
 h1 {
