--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 @import 'layout/footer';
 @import 'vendors/grid';
 @import 'components/distro';
+@import 'components/topnav';
 
 @import url(https://fonts.googleapis.com/css?family=Roboto);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab);
@@ -11,6 +12,7 @@
 body {
   background-color: $dark-green;
   font-family: $main-font;
+  margin-top: 60px;
 }
 
 h1 {
