Fixed email and index.html

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -54,14 +54,14 @@ html(lang="en")
             img(src="img/tux.png")
             h2 Linux Kernel
             p.
-             Versions of the Linux Kernel (Up to 4.4.X) can also be found on the #[a(href="misc.html") Misc.]
+             Versions of the Linux Kernel (Up to 4.5.X) can also be found on the #[a(href="misc.html") Misc.]
              page, found in the same place is documentation and souce for the kernel.
         
         hr
         
         h2 History
         p.
-          The newest iteration will be completed in February 2016, but we have had Mirror
+          The newest iteration was completed in April 2016, but we have had Mirror
           running for almost a decade now. If you want to learn more about the newest
           iteration or the history behind the project, Visit the #[a(href="history.html") History] page.
         
