Switching jade -> pug & updating history page

--- a/pug/directory.pug
+++ b/pug/directory.pug
@@ -17,5 +17,5 @@ html(lang="en")
       };
       
   body
-    include ../includes/_header.jade
-    include ../includes/_footer.jade
+    include ../includes/_header.pug
+    include ../includes/_footer.pug
