--- a/pug/misc.pug
+++ b/pug/misc.pug
@@ -17,7 +17,7 @@ html(lang="en")
       };
       
   body
-    include ../includes/_header.jade
+    include ../includes/_header.pug
     
     .content
       .container
@@ -100,4 +100,4 @@ html(lang="en")
           h5 Homepage: 
           a(href="https://isabelle.in.tum.de/") https://isabelle.in.tum.de/
     
-    include ../includes/_footer.jade
+    include ../includes/_footer.pug
