--- a/pug/distributions.pug
+++ b/pug/distributions.pug
@@ -17,7 +17,7 @@ html(lang="en")
       };
       
   body
-    include ../includes/_header.jade
+    include ../includes/_header.pug
     .content
       .container
         h1 Distributions
@@ -320,4 +320,4 @@ html(lang="en")
               h5 Homepage: 
               a(href='http://unity-linux.org/') http://unity-linux.org/
 
-    include ../includes/_footer.jade
+    include ../includes/_footer.pug
