--- a/pug/history.pug
+++ b/pug/history.pug
@@ -17,7 +17,7 @@ html(lang="en")
       };
       
   body
-    include ../includes/_header.jade
+    include ../includes/_header.pug
     .content
       .container
         h1 History
@@ -26,21 +26,23 @@ html(lang="en")
       .container
         h1 Sponsors
         p We would like to thank everyone that helped out contributing to help the new mirror possible, including:
-        .row
-          .col.col--2-of-4
-            a(href="http://www.vmware.com/"): img(src="img/vmware.jpg").logo
-          .col.col--2-of-4
-            a(href="https://www.siegetechnologies.com/"): img(src="img/siege.jpg").logo
-        p and these other sponsors:
-        
         ul.center(style="list-style-type: none;")
           li Eric Busse
           li Ted Champagne
           li Steve Evanchik
           li Wenjin Hu
           li Mark Platek
+
+        p and these corporate sponsors:
+        .row
+          .col.col--2-of-4
+            a(href="http://www.vmware.com/"): img(src="img/vmware.jpg").logo
+          .col.col--2-of-4
+            a(href="https://www.siegetechnologies.com/"): img(src="img/siege.jpg").logo
+        
+        
         
       .container.subfooter.center
         p The logos are copyrighted by VMware and Siege Technologies respectively and fair use is given.
     
-    include ../includes/_footer.jade
+    include ../includes/_footer.pug
