--- a/pug/index.pug
+++ b/pug/index.pug
@@ -16,7 +16,7 @@ html(lang="en")
       var foo = document.getElementById("navhome");
       foo.setAttribute("class", "current"); };
   body
-    include ../includes/_header.jade
+    include ../includes/_header.pug
     
     .carasouel
       .container
@@ -65,4 +65,4 @@ html(lang="en")
           running for almost a decade now. If you want to learn more about the newest
           iteration or the history behind the project, Visit the #[a(href="history.html") History] page.
         
-    include ../includes/_footer.jade
+    include ../includes/_footer.pug
